--- a/services.html
+++ b/services.html
@@ -1,102 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Our Services | SMIC</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Our Services</title>
 
   <style>
-    body { margin: 0; font-family: Segoe UI, sans-serif; background: #f4f4f4; }
-
-    nav {
-      background: #111; padding: 15px 40px;
-      display: flex; justify-content: space-between; align-items: center;
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, #005b96, #003f63);
+      color: white;
     }
-    .logo { color: #ffcc00; font-size: 28px; font-weight: 700; }
-    nav a { color: white; margin-left: 20px; text-decoration: none; font-size: 17px; }
-    nav a:hover { color: #ffcc00; }
 
-    .header { text-align: center; padding: 50px; background: #222; color: white; }
-    .header h1 { font-size: 42px; margin: 0; }
+    /* -------- NAVBAR -------- */
+    .navbar {
+      width: 100%;
+      background: rgba(0, 0, 0, 0.4);
+      padding: 15px 0;
+      position: fixed;
+      top: 0;
+      left: 0;
+      display: flex;
+      justify-content: center;
+      gap: 40px;
+      backdrop-filter: blur(6px);
+      z-index: 99;
+    }
 
-    .grid {
-      padding: 40px;
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
-      gap: 25px;
+    .navbar a {
+      color: white;
+      text-decoration: none;
+      font-size: 18px;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+
+    .navbar a:hover {
+      color: #ffeb3b;
+    }
+
+    /* -------- CONTENT -------- */
+    .container {
+      width: 90%;
+      margin: 0 auto;
+      padding-top: 120px; /* navbar ke neeche space */
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 42px;
+      margin-bottom: 40px;
+      font-weight: bold;
+    }
+
+    .service-boxes {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      margin: auto;
+      max-width: 450px;
     }
 
     .box {
-      background: white;
-      padding: 25px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      background: rgba(0, 0, 0, 0.3);
+      padding: 20px;
+      border-radius: 12px;
+      text-align: left;
       transition: 0.3s;
+      cursor: pointer;
     }
-    .box:hover { transform: translateY(-6px); }
-    .box h3 { margin-top: 0; color: #222; }
+
+    .box:hover {
+      background: rgba(0, 0, 0, 0.6);
+      transform: translateY(-5px);
+    }
+
+    .title {
+      font-size: 20px;
+      font-weight: bold;
+      margin-bottom: 6px;
+      color: #ffeb3b;
+    }
+
+    .desc {
+      font-size: 15px;
+      line-height: 1.4;
+    }
   </style>
 </head>
 
 <body>
 
-<nav>
-  <div class="logo">SMIC</div>
-  <div>
+  <!-- NAVBAR -->
+  <div class="navbar">
     <a href="index.html">Home</a>
     <a href="services.html">Our Services</a>
     <a href="contact.html">Contact Us</a>
     <a href="help.html">Help</a>
   </div>
-</nav>
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Our Services</title>
-    <link rel="stylesheet" href="styles.css" />
-</head>
+  <!-- CONTENT -->
+  <div class="container">
+    <h1>Our Services</h1>
 
-<body>
+    <div class="service-boxes">
 
-    <section class="services-section">
-        
-        <div class="header">
-            <h1>Our Services</h21>
-        </div>
+      <div class="box">
+        <div class="title">Highway Engineering</div>
+        <div class="desc">DPR, Feasibility Study, Geometric Design, Pavement Design</div>
+      </div>
 
-        <div class="grid">
+      <div class="box">
+        <div class="title">Traffic & Road Safety</div>
+        <div class="desc">Traffic Survey, RSA, Blackspot Study, AVC, ATC, ITS</div>
+      </div>
 
-            <div class="box">
-                <h3>Highway Engineering</h3>
-                <p>DPR, Feasibility Study, Geometric Design, Pavement Design.</p>
-            </div>
+      <div class="box">
+        <div class="title">Structural Engineering</div>
+        <div class="desc">Road Structures, Bridge Design, Culverts</div>
+      </div>
 
-            <div class="box">
-                <h3>Traffic & Road Safety</h3>
-                <p>Traffic Survey, RSA, Blackspot Study, ATCC, ITMS.</p>
-            </div>
+      <div class="box">
+        <div class="title">Surveying & GIS</div>
+        <div class="desc">DGPS, Total Station Survey, Drone Survey, Lidar Mapping</div>
+      </div>
 
-            <div class="box">
-                <h3>Structural Engineering</h3>
-                <p>RCC Design, Steel Structure, Bridge Design.</p>
-            </div>
+      <div class="box">
+        <div class="title">PMC Services</div>
+        <div class="desc">Quality Supervision, Project Monitoring, Billing</div>
+      </div>
 
-            <div class="box">
-                <h3>Surveying & GIS</h3>
-                <p>DGPS, Total Station, Drone Survey, Lidar Mapping.</p>
-            </div>
-
-            <div class="box">
-                <h3>PMC Services</h3>
-                <p>Quality Supervision, Project Monitoring, Billing.</p>
-            </div>
-
-        </div>
-
-    </section>
+    </div>
+  </div>
 
 </body>
 </html>
