--- a/contact.html
+++ b/contact.html
@@ -39,10 +39,11 @@
 
   <p><b>Company:</b> Shree Mahamai Infra Consultant Pvt. Ltd.</p>
   <p><b>Email:</b> rishikant.tiwari1601@gmail.com</p>
-  <p><b>Phone:</b> +919303272006,7389182255</p>
+  <p><b>Phone:</b> 9303272006,7389182255</p>
   <p><b>Address:</b> Senior MIG-17,Gokuldham Complex,Gautam Nagar,Bhopal(M.P) 462023</p>
 </div>
 
 </body>
 
 </html>
+
