--- a/services.html
+++ b/services.html
@@ -5,6 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Our Services</title>
 
+  <nav>
+  <div class="logo">SMIC</div>
+  <div>
+    <a href="index.html">Home</a>
+    <a href="services.html">Our Services</a>
+    <a href="contact.html">Contact Us</a>
+    <a href="help.html">Help</a>
+  </div>
+</nav>
   <style>
     body {
       margin: 0;
@@ -137,4 +146,5 @@
 
 </body>
 </html>
+
 
